...
                                ],
                                borderRadius: BorderRadius.circular(12.0),
                              ),
                              child: Container(
                                width: 200.0,
                                child: TextFormField(
                                  key: ValueKey('email_field_rpdn'),
                                  controller: _model.emailFieldTextController,
                                  focusNode: _model.emailFieldFocusNode,
                                  autofocus: false,
                                  textInputAction: TextInputAction.next,
                                  obscureText: false,
                                  decoration: InputDecoration(
...
                                ],
                                borderRadius: BorderRadius.circular(12.0),
                              ),
                              child: Container(
                                width: double.infinity,
                                child: TextFormField(
                                  key: ValueKey('password_field_csu8'),
                                  controller:
                                      _model.passwordFieldTextController,
                                  focusNode: _model.passwordFieldFocusNode,
                                  autofocus: false,
                                  obscureText: !_model.passwordFieldVisibility,
                                  decoration: InputDecoration(
...
                                ],
                                borderRadius: BorderRadius.circular(12.0),
                              ),
                              child: Container(
                                width: double.infinity,
                                child: TextFormField(
                                  key: ValueKey('Confirm_pass_field_80q8'),
                                  controller:
                                      _model.confirmPassFieldTextController,
                                  focusNode: _model.confirmPassFieldFocusNode,
                                  autofocus: false,
                                  obscureText:
                                      !_model.confirmPassFieldVisibility,
...
                                      ),
                                    )
                                  ],
                                  borderRadius: BorderRadius.circular(12.0),
                                ),
                                child: FFButtonWidget(
                                  key: ValueKey('SignUp_Button_ms4s'),
                                  onPressed: () async {
                                    logFirebaseEvent(
                                        'SIGN_UP_PAGE_PAGE_SignUp_Button_ON_TAP');
                                    logFirebaseEvent('SignUp_Button_auth');
                                    GoRouter.of(context).prepareAuthEvent();
                                    if (_model
...
                                        _model.confirmPassFieldTextController
                                            .text) {
                                      ScaffoldMessenger.of(context)
                                          .showSnackBar(
                                        SnackBar(
                                          content: Text(
                                            'Passwords don\'t match!',
                                          ),
                                        ),
                                      );
                                      return;
                                    }

...
