...
                                ],
                                borderRadius: BorderRadius.circular(12.0),
                              ),
                              child: Container(
                                width: double.infinity,
                                child: TextFormField(
                                  key: ValueKey('email_field_3oli'),
                                  controller: _model.emailFieldTextController,
                                  focusNode: _model.emailFieldFocusNode,
                                  autofocus: false,
                                  textInputAction: TextInputAction.next,
                                  obscureText: false,
                                  decoration: InputDecoration(
...
                                ],
                                borderRadius: BorderRadius.circular(12.0),
                              ),
                              child: Container(
                                width: 200.0,
                                child: TextFormField(
                                  key: ValueKey('pass_field_0nao'),
                                  controller: _model.passFieldTextController,
                                  focusNode: _model.passFieldFocusNode,
                                  autofocus: false,
                                  textInputAction: TextInputAction.done,
                                  obscureText: !_model.passFieldVisibility,
                                  decoration: InputDecoration(
...
                                    ),
                                  )
                                ],
                                borderRadius: BorderRadius.circular(12.0),
                              ),
                              child: FFButtonWidget(
                                key: ValueKey('Login_Button_jznr'),
                                onPressed: () async {
                                  logFirebaseEvent(
                                      'LOGIN_PAGE_PAGE_Login_Button_ON_TAP');
                                  logFirebaseEvent('Login_Button_auth');
                                  GoRouter.of(context).prepareAuthEvent();

...
