...
                          Align(
                            alignment: AlignmentDirectional(0.0, 1.0),
                            child: wrapWithModel(
                              model: _model.navBarWithMiddleButtonModel,
                              updateCallback: () => safeSetState(() {}),
                              child: NavBarWithMiddleButtonWidget(
                                key: ValueKey('NavBarWithMiddleButton_k3n8'),
                              ),
                            ),
                          ),
                        ],
                      ),
                    ),
...
